--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,10 +10,13 @@ akka {
 play.filters.headers.contentSecurityPolicy = null
 
 // https://www.playframework.com/documentation/2.6.x/AllowedHostsFilter
-play.filters.hosts.allowed = ["localhost:9000", "localhost:19001"]
+play.filters.hosts.allowed = ["localhost:9000", "127.0.0.1", "localhost:19001"]
 
 // Add CSP header in explicitly in a custom filter.
 play.filters.enabled += filters.ContentSecurityPolicyFilter
 play.filters.disabled+=play.filters.csrf.CSRFFilter
+play.filters.disabled+=play.filters.hosts.AllowedHostsFilter
 
 play.editor="http://localhost:63342/api/file/?file=%s&line=%s"
+
+play.http.secret.key="rickiseenshemale"
