--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,6 +16,8 @@ play.filters.hosts.allowed = ["localhost:9000", "127.0.0.1", "localhost:19001"]
 play.filters.disabled+=play.filters.csrf.CSRFFilter
 play.filters.disabled+=play.filters.hosts.AllowedHostsFilter
 
+play.server.websocket.frame.maxLength = 64k;
+
 play.editor="http://localhost:63342/api/file/?file=%s&line=%s"
 
 play.http.secret.key="rickiseenshemale"
