--- a/conf/application.conf
+++ b/conf/application.conf
@@ -10,11 +10,32 @@ akka {
 play.filters.headers.contentSecurityPolicy = null
 
 // https://www.playframework.com/documentation/2.6.x/AllowedHostsFilter
-play.filters.hosts.allowed = ["localhost:9000", "127.0.0.1", "localhost:19001"]
+play.filters.hosts.allowed = ["localhost:9000", "localhost:80", "127.0.0.1", "localhost:19001"]
 
 // Add CSP header in explicitly in a custom filter.
 play.filters.disabled+=play.filters.csrf.CSRFFilter
 play.filters.disabled+=play.filters.hosts.AllowedHostsFilter
+
+//local
+db.default.driver = org.h2.Driver
+db.default.url = "jdbc:h2:mem:play;MODE=MSSQLServer"
+db.default.username = sa
+db.default.password = ""
+
+//prod/dev
+play.server.http.port = ${?REST_PORT}
+
+db.default.jndiName = DefaultDS
+db.default.hikaricp.connectionTestQuery = "SELECT 1"
+
+db.default.username = ${?DB_USERNAME}
+db.default.driver = ${?DB_DRIVER}
+db.default.pass = ${?DB_PASSWORD}
+db.default.url = ${?DB_URL_DEV}
+db.default.url = ${?DB_URL}
+
+
+jpa.default = defaultPersistenceUnit
 
 play.server.websocket.frame.maxLength = 64k;
 
