--- a/.travis.yml
+++ b/.travis.yml
@@ -7,21 +7,21 @@ deploy:
     user: $user
     secret: $secret
     env: prod
-    envvars.DB_USERNAME = $DB_USERNAME
-    envvars.DB_PASSWORD = $DB_PASSWORD
-    envvars.DB_DRIVER = $DB_DRIVER
-    envvars.DB_URL = $REST_PORT
+    envvars.DB_USERNAME: $DB_USERNAME
+    envvars.DB_PASSWORD: $DB_PASSWORD
+    envvars.DB_DRIVER: $DB_DRIVER
+    envvars.DB_URL: $REST_PORT
     on:
       branch: master
   - provider: boxfuse
     user: $user
     secret: $secret
     env: test
-    envvars.DB_USERNAME = $DB_USERNAME
-    envvars.DB_PASSWORD = $DB_PASSWORD
-    envvars.DB_DRIVER = $DB_DRIVER
-    envvars.DB_URL = $DB_URL_DEV
-    envvars.REST_PORT = $REST_PORT
+    envvars.DB_USERNAME: $DB_USERNAME
+    envvars.DB_PASSWORD: $DB_PASSWORD
+    envvars.DB_DRIVER: $DB_DRIVER
+    envvars.DB_URL: $DB_URL_DEV
+    envvars.REST_PORT: $REST_PORT
     on:
       branch: develop
 # Use container-based infrastructure
