--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,27 @@
 language: scala
 jdk: oraclejdk8
-script: 
+# safelist
+branches:
+  only:
+  - master
+  - develop
+script:
   - sbt dist
 deploy:
   - provider: boxfuse
     user: $user
     secret: $secret
     env: prod
-    envvars.DB_USERNAME = $DB_USERNAME
-    envvars.DB_PASSWORD = $DB_PASSWORD
-    envvars.DB_DRIVER = $DB_DRIVER
-    envvars.DB_URL = $REST_PORT
+    extra_args: "-envvars.DB_USERNAME=$DB_USERNAME -envvars.DB_PASSWORD=$DB_PASSWORD -envvars.DB_DRIVER=$DB_DRIVER -envvars.REST_PORT=$REST_PORT -envvars.DB_URL=$DB_URL"
+    image: "GenServer:$TRAVIS_BUILD_NUMBER"
     on:
       branch: master
   - provider: boxfuse
     user: $user
     secret: $secret
     env: test
-    envvars.DB_USERNAME = $DB_USERNAME
-    envvars.DB_PASSWORD = $DB_PASSWORD
-    envvars.DB_DRIVER = $DB_DRIVER
-    envvars.DB_URL = $DB_URL_DEV
-    envvars.REST_PORT = $REST_PORT
+    extra_args: "-envvars.DB_USERNAME=$DB_USERNAME -envvars.DB_PASSWORD=$DB_PASSWORD -envvars.DB_DRIVER=$DB_DRIVER -envvars.REST_PORT=$REST_PORT -envvars.DB_URL=$DB_URL_DEV"
+    image: "GenServer:$TRAVIS_BUILD_NUMBER"
     on:
       branch: develop
 # Use container-based infrastructure
