--- a/.travis.yml
+++ b/.travis.yml
@@ -5,23 +5,26 @@ branches:
   only:
   - master
   - develop
-script:
+script: 
   - sbt dist
 deploy:
   - provider: boxfuse
     user: $user
     secret: $secret
     env: prod
-    extra_args: "-envvars.DB_USERNAME=$DB_USERNAME -envvars.DB_PASSWORD=$DB_PASSWORD -envvars.DB_DRIVER=$DB_DRIVER -envvars.REST_PORT=$REST_PORT -envvars.DB_URL=$DB_URL"
-    image: "GenServer:$TRAVIS_BUILD_NUMBER"
+    envvars.DB_USERNAME: $DB_USERNAME
+    envvars.DB_PASSWORD: $DB_PASSWORD
+    envvars.DB_URL: $REST_PORT
     on:
       branch: master
   - provider: boxfuse
     user: $user
     secret: $secret
     env: test
-    extra_args: "-envvars.DB_USERNAME=$DB_USERNAME -envvars.DB_PASSWORD=$DB_PASSWORD -envvars.DB_DRIVER=$DB_DRIVER -envvars.REST_PORT=$REST_PORT -envvars.DB_URL=$DB_URL_DEV"
-    image: "GenServer:$TRAVIS_BUILD_NUMBER"
+    envvars.DB_USERNAME: $DB_USERNAME
+    envvars.DB_PASSWORD: $DB_PASSWORD
+    envvars.DB_URL: $DB_URL_DEV
+    envvars.REST_PORT: $REST_PORT
     on:
       branch: develop
 # Use container-based infrastructure
