--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ deploy:
     secret: $secret
     env: prod
     extra_args: "-envvars.DB_USERNAME=$DB_USERNAME -envvars.DB_PASSWORD=$DB_PASSWORD -envvars.DB_DRIVER=$DB_DRIVER -envvars.REST_PORT=$REST_PORT -envvars.DB_URL=$DB_URL"
-    image: "GenServer:$TRAVIS_BUILD_NUMBER"
+    image: "genserver:$TRAVIS_BUILD_NUMBER"
     on:
       branch: master
   - provider: boxfuse
@@ -21,7 +21,7 @@ deploy:
     secret: $secret
     env: test
     extra_args: "-envvars.DB_USERNAME=$DB_USERNAME -envvars.DB_PASSWORD=$DB_PASSWORD -envvars.DB_DRIVER=$DB_DRIVER -envvars.REST_PORT=$REST_PORT -envvars.DB_URL=$DB_URL_DEV"
-    image: "GenServer:$TRAVIS_BUILD_NUMBER"
+    image: "genserver:$TRAVIS_BUILD_NUMBER"
     on:
       branch: develop
 # Use container-based infrastructure
