pls work on server

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,7 +30,7 @@ db.default.hikaricp.connectionTestQuery = "SELECT 1"
 
 db.default.username = ${?DB_USERNAME}
 db.default.driver = ${?DB_DRIVER}
-db.default.pass = ${?DB_PASSWORD}
+db.default.password = ${?DB_PASSWORD}
 db.default.url = ${?DB_URL_DEV}
 db.default.url = ${?DB_URL}
 
