unfix srings, test a port thing

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,7 +23,7 @@ db.default.username = sa
 db.default.password = ""
 
 //prod/dev
-play.server.http.port = ${?REST_PORT}
+play.server.http.port = 80
 
 db.default.jndiName = DefaultDS
 db.default.hikaricp.connectionTestQuery = "SELECT 1"
