--- a/conf/application.conf
+++ b/conf/application.conf
@@ -22,6 +22,8 @@ db.default.url = "jdbc:h2:mem:play;MODE=MSSQLServer"
 db.default.username = sa
 db.default.password = ""
 
+play.server.http.port = 80
+
 //prod/dev
 play.server.http.port = ${?REST_PORT}
 
