--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
     user: $user
     secret: $secret
     env: prod
-    extra_args: "-envvars.DB_USERNAME=\"$DB_USERNAME\" -envvars.DB_PASSWORD=\"$DB_PASSWORD\" -envvars.DB_DRIVER=\"$DB_DRIVER\" -envvars.REST_PORT=\"$REST_PORT\" -envvars.DB_URL=\"$DB_URL\""
+    extra_args: "-ports.http=80 -envvars.DB_USERNAME=\"$DB_USERNAME\" -envvars.DB_PASSWORD=\"$DB_PASSWORD\" -envvars.DB_DRIVER=\"$DB_DRIVER\" -envvars.REST_PORT=\"$REST_PORT\" -envvars.DB_URL=\"$DB_URL\""
     image: "genserver:$TRAVIS_BUILD_NUMBER"
     on:
       branch: master
@@ -20,7 +20,7 @@ deploy:
     user: $user
     secret: $secret
     env: test
-    extra_args: "-envvars.DB_USERNAME=\"$DB_USERNAME\" -envvars.DB_PASSWORD=\"$DB_PASSWORD\" -envvars.DB_DRIVER=\"$DB_DRIVER\" -envvars.REST_PORT=\"$REST_PORT\" -envvars.DB_URL=\"$DB_URL_DEV\""
+    extra_args: "-ports.http=80 -envvars.DB_USERNAME=\"$DB_USERNAME\" -envvars.DB_PASSWORD=\"$DB_PASSWORD\" -envvars.DB_DRIVER=\"$DB_DRIVER\" -envvars.REST_PORT=\"$REST_PORT\" -envvars.DB_URL=\"$DB_URL_DEV\""
     image: "genserver:$TRAVIS_BUILD_NUMBER"
     on:
       branch: develop
