YET ANOTHER FUCKING TEST

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,6 +33,9 @@ db.default.username = ${?DB_USERNAME}
 db.default.driver = ${?DB_DRIVER}
 db.default.password = ${?DB_PASSWORD}
 db.default.url = "jdbc:sqlserver://maatwork.cdxo05y3kdwr.eu-central-1.rds.amazonaws.com:1433;databaseName=specialpeople"
+db.default.database = "specialpeoples"
+db.default.schema = "specialpople"
+db.default.databaseName = "loljostiband"
 
 
 jpa.default = defaultPersistenceUnit
