--- a/conf/application.conf
+++ b/conf/application.conf
@@ -32,10 +32,7 @@ db.default.hikaricp.connectionTestQuery = "SELECT 1"
 db.default.username = ${?DB_USERNAME}
 db.default.driver = ${?DB_DRIVER}
 db.default.password = ${?DB_PASSWORD}
-db.default.url = "jdbc:sqlserver://maatwork.cdxo05y3kdwr.eu-central-1.rds.amazonaws.com:1433;databaseName=specialpeople"
-db.default.database = "specialpeoples"
-db.default.schema = "specialpople"
-db.default.databaseName = "loljostiband"
+db.default.url = ${?DB_URL}
 
 
 jpa.default = defaultPersistenceUnit
